tests/query_errors/subquery_duplicate_define/error.txt
Error: 
    6 | define query passthrough
    7 | query
    8 |   select event from in into out;
    9 | end;
      | ^^^ Can't define the query `passthrough` twice
